[package]
authors = ["Andy Caldwell <andrew.caldwell@metaswitch.com>"]
categories = ["concurrency"]
description = "A lock-free, threadsafe way to publish data, just stick it on the pinboard"
keywords = [
    "concurrency",
    "lock-free",
    "threading",
    "thread-safety",
]
license = "MIT"
name = "pinboard"
repository = "https://github.com/bossmc/pinboard"
version = "1.4.1"

[badges.travis-ci]
repository = "bossmc/pinboard"

[dependencies]
crossbeam = "0.3.0"
